--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
 	<form action="/submit" id="textform" method="post">
 	    <textarea name="quantity" rows="4" cols="50" placeholder="How much did you spend?"></textarea>
 	    <br>
+	    <input type="number" name="quantity" placeholder = "0">
 	    <input type="text" name="buyer" placeholder="Your name">
 	    <input type="text" name="seller" placeholder="seller">
 	    <input type="submit" value="Post">
@@ -26,14 +27,7 @@
 	   <div class="post_box-header">
 	      <div class="post_box-options"><button class="option-btn">Reply</button></div>
 	      <div style="background: rgb(0, 97, 146) none repeat scroll 0% 0%; box-shadow: rgb(0, 97, 146) 0px 0px 0px 2px;" class="post_box-avatar">{{post.buyer[0]}}</div>
-	      <div class="name-header">{{post.buyer}}</div>
-	      <div class="post_box-subtitle"> Posted at <i>{{readable_time(post.timestamp)}}</i></div>
-	      <div class="post_box-subtitle"> Purchased from <i>{{post.seller}}</i></div>
-	   </div>
-	   <div>
-	      <div class="post_box-body">
-	         <p>{{post.quantity}}</p>
-	      </div>
+	      <div class="post_box-subtitle"> <i>{{post.buyer}}</i> gave <i>{{post.seller}}</i> <i>{{post.quantity}}</i> at  <i>{{readable_time(post.timestamp)}}</i></div>
 	   </div>
 	</div>
 	{% endfor %}
